tests/rosetta/out/Fortran/chaos-game.error
gfortran: exit status 1
/tmp/chaos-game.f90:52:5:

   52 |     seed = r(((0)+1))
      |     1
Error: Unclassifiable statement at (1)
/tmp/chaos-game.f90:53:16:

   53 |     idx = int(r(((1)+1)))
      |                1
Error: Syntax error in argument list at (1)
/tmp/chaos-game.f90:55:24:

   55 |     px = int(((((px + v(((0)+1)))) / 2)))
      |                        1
Error: Expected a right parenthesis in expression at (1)
/tmp/chaos-game.f90:56:24:

   56 |     py = int(((((py + v(((1)+1)))) / 2)))
      |                        1
Error: Expected a right parenthesis in expression at (1)
/tmp/chaos-game.f90:79:4:

   79 |     res = (/next,mod(next,n)/)
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/chaos-game.f90:33:27:

   33 |       app0(1:size(line)) = line
      |                           1
Error: Cannot convert INTEGER(4) to CHARACTER(100) at (1)
/tmp/chaos-game.f90:35:13:

   35 |       line = app0
      |             1
Error: Cannot convert CHARACTER(100) to INTEGER(4) at (1)
/tmp/chaos-game.f90:41:4:

   41 |     app1(size(grid)+1) = line
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/chaos-game.f90:54:16:

   54 |     v = vertices(((idx)+1))
      |                1
Error: Rank mismatch in array reference at (1) (1/2)
/tmp/chaos-game.f90:57:29:

   57 |     if ((((((((px >= 0) .and. px) < width) .and. py) >= 0) .and. py) < height)) then
      |                             1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/chaos-game.f90:58:10:

   58 |       grid(((py)+1),((px)+1)) = '*'
      |          1
Error: Rank mismatch in array reference at (1) (2/1)
/tmp/chaos-game.f90:64:11:

   64 |     line = ''
      |           1
Error: Cannot convert CHARACTER(0) to INTEGER(4) at (1)
/tmp/chaos-game.f90:67:25:

   67 |       line = (line + grid(((y)+1),((x)+1)))
      |                         1
Error: Rank mismatch in array reference at (1) (2/1)
