tests/rosetta/out/Fortran/chaos-game.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program chaos_game
  implicit none
  integer :: width
  integer :: height
  integer :: iterations
  integer, allocatable, dimension(:) :: grid
  integer :: y
  integer :: seed
  integer, dimension(3,2) :: vertices
  integer :: px
  integer :: py
  integer :: i
    integer, allocatable, dimension(:) :: line
    integer :: x
      character(len=100), allocatable, dimension(:) :: app0
    integer, allocatable, dimension(:) :: app1
    integer :: r
    integer :: idx
    integer :: v
    integer :: next
  width = 60
  height = int(((real(width) * 0.86602540378)))
  iterations = 5000
  allocate(grid(0))
  y = 0
  do while ((y < height))
    allocate(line(0))
    x = 0
    do while ((x < width))
      if (allocated(app0)) deallocate(app0)
      allocate(app0(size(line)+1))
      app0(1:size(line)) = line
      app0(size(line)+1) = ' '
      line = app0
      x = (x + 1)
    end do
    if (allocated(app1)) deallocate(app1)
    allocate(app1(size(grid)+1))
    app1(1:size(grid)) = grid
    app1(size(grid)+1) = line
    grid = app1
    y = (y + 1)
  end do
  seed = 1
  vertices = reshape((/0,(height - 1),(width - 1),(height - 1),int(((width / 2))),0/),(/3,2/))
  px = int(((width / 2)))
  py = int(((height / 2)))
  i = 0
  do while ((i < iterations))
    r = randInt(seed,3)
    seed = r(((0)+1))
    idx = int(r(((1)+1)))
    v = vertices(((idx)+1))
    px = int(((((px + v(((0)+1)))) / 2)))
    py = int(((((py + v(((1)+1)))) / 2)))
    if ((((((((px >= 0) .and. px) < width) .and. py) >= 0) .and. py) < height)) then
      grid(((py)+1),((px)+1)) = '*'
    end if
    i = (i + 1)
  end do
  y = 0
  do while ((y < height))
    line = ''
    x = 0
    do while ((x < width))
      line = (line + grid(((y)+1),((x)+1)))
      x = (x + 1)
    end do
    print *, line
    y = (y + 1)
  end do
  contains
  recursive integer function randInt(s,n) result(res)
    integer, intent(in) :: s
    integer, intent(in) :: n
    next = mod((((s * 1664525) + 1013904223)),2147483647)
    res = (/next,mod(next,n)/)
    return
  end function randInt
end program chaos_game
